cmd/pkg/ingestor/suite/testdata/traditional-folder-structure/proc-mount/samples/psp-proc-mount/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPProcMount
metadata: # kpt-merge: /psp-proc-mount
  name: psp-proc-mount
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    procMount: Default
