cmd/pkg/ingestor/suite/testdata/traditional-folder-structure/proc-mount/samples/psp-proc-mount/example_disallowed.yaml
apiVersion: v1
kind: Pod
metadata: # kpt-merge: /nginx-proc-mount-disallowed
  name: nginx-proc-mount-disallowed
  labels:
    app: nginx-proc-mount
spec:
  containers:
  - name: nginx
    image: nginx
    securityContext:
      procMount: Unmasked #Default
